# valuation-pro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ROBUST_XBRL.md  SKILL.md  create_wipro_inputs.py  download_sec.py  download_xbrl_robust.py  get_wipro_data.py  get_wipro_data_detailed.py  inspect_xbrl.py  pr_body.md  prompt.txt  prompt_10k_extraction.md  pyproject.toml  requirements.txt  run_model_experiment.py  run_nifty50_valuation.py  run_valuation_script.py  wipro_valuation.py
.github/workflows/: ci.yml
_archive/sec-data-integration_old/: batch_test.py  parquet_sec_extractor.py  sec_data_extractor.py  test_merge_feasibility.py
_archive/valuation_engine_old/: README.md
_archive/valuation_old/: README.md  maang_valuation.py  parity_verification.py  run_parquet_valuation.py  run_valuation.py
docs/: cost_of_capital_worksheet.md
notebooks/: yf_data.ipynb
sec-data-integration/: EXTRACTION_DOCS.md  parquet_sec_extractor.py  test_merge_feasibility.py
tests/: conftest.py
tests/engine/: test_engine_units.py  (+3 more)
valuation/: maang_valuation.py  parity_verification.py  run_valuation.py
valuation_service/: .gitignore  README.md  pyproject.toml  run.sh  service.py  utils.py
valuation_service/api/: endpoints.py
valuation_service/connectors/: __init__.py  base.py  sec.py  yahoo.py
valuation_service/docs/: CALCULATION_LOGIC.md
valuation_service/tests/: test_api.py  test_api_errors.py  test_api_integration.py  test_connectors.py  test_defaults.py  test_factory_singleton.py  test_fix_zerodivision.py  test_integration.py  test_mapping.py  test_middleware_error.py  test_service.py  test_yahoo_connector.py  test_yahoo_extraction.py
yf-data-integration/: README.md
(+107 files in other folders)
